src/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: gin-gonic
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector: {}
  type: LoadBalancer
